@@ -78,6 +78,7 @@
   <div id="main">
     <div id="header" class="section">
       <img src="./img/a.png" 
+        class="lax"
         data-lax-scale="0 1, vh 5"
         data-lax-scale:s="0 1, vh 1" 
         data-lax-preset:s="fadeInOut" 
